# cleo-basic

./: .env.example  .gitignore  CLEO_TECH_STACK.md  PROJECT_STRUCTURE.md  README.md  REALTRACK_INGEST_ENGINE.md  pyproject.toml
docs/: DATA_OUTPUT_CHEATSHEET.md  LAUNCHD_SETUP.md  REALTRACK_ARCHITECTURE.md  REALTRACK_INGEST_QUICKSTART.md
ops/launchd/: com.cleo.realtrack.ingest.plist
python/cleo_address/: __init__.py
python/cleo_analysis/: __init__.py
python/cleo_brands/: __init__.py
python/cleo_core/: __init__.py
python/cleo_realtrack/: __init__.py
python/cleo_realtrack/ingest/: __init__.py  assets.py  extract_links.py  extract_rt_id.py  integrity_checks.py  login.py  search_nav.py  search_page.py
python/cleo_refinement/: __init__.py
scripts/realtrack_ingest/: fetch_new_realtrack_transactions.py  reset_realtrack_data.py
user_data/: html-1.html  html2.html  html3.html  html4.html  html5.html  html6.html  html7.html  realtrack-link-details-page.html  realtrack-login-page.html  realtrack-post-login-page.html  realtrack-search-results-page1.html  realtrack-searchicicomps-page-withsettingsforretail.html
